# speaker_recognition

./: app.py  final.py  fine.py  last.py  main.py  new.py  pyproject.toml  requirements.txt  setup.py  setup.sh
speaker_recognition_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
