[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "speaker-recognition-app"
version = "0.1.0"
description = "A Streamlit-based speaker recognition app"
authors = [
    {name = "Krishna Kumar", email = "godkrishnasskal@gmail.com"},
]
dependencies = [
    "streamlit",
    "sounddevice",
    "numpy",
    "matplotlib",
    "torchaudio",
    "speechbrain",
    "scikit-learn",
    "librosa",
    "pyaudio"
]
requires-python = ">=3.10"

[project.urls]
"Homepage" = "https://github.com/krishnakumar51/speaker_recognition.git"
